# taskNote-bridge-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  MCP_Usage_Guide.txt  PROJECT_SUCCESS.md  README.md  RELEASE_CHECKLIST.md  TaskNote-Bridge-v1.0.0.dmg  TaskNote-Bridge-v1.1.0.dmg  VSCODE_MCP_SETUP.md  apple_notes.py  apple_notes_tools.py  comprehensive_test.sh  create_release_dmg.sh  create_usage_note.py  debug_claude_connection.sh  debug_stdio_mode.sh  formatters.py  handlers.py  hello.py  install.sh  issues.md  launch_mcp_client.sh  launch_swift_mcp_stdio.sh  launch_tasknote_bridge.sh  package-lock.json  package.json  project.yml  pyproject.toml  setup_config.py  swift_mcp_stdio.swift  test_apple_notes.py  test_claude_sequence.sh  test_server.py  test_stdio_direct.sh  test_stdio_transport.swift  test_tool_call.sh  test_vscode_integration.sh  (+7 more)
.github/: copilot-instructions.md  mcp-architecture.md  mcp-client-implementation.md  mcp-protocol-specs.md  mcp-server-development.md  things-mcp-usage.md
.github/workflows/: release.yml
TaskNote Bridge/: ContentView.swift  Info.plist  MCPProtocol.swift  MCPService.swift  NotesIntegration.swift  StdioMCPServer.swift  SwiftMCPServer.swift  SwiftMCPServer_Complex.swift  SwiftMCPServer_Minimal.swift  ThingsMCPApp.swift
TaskNote Bridge.app/Contents/: Info.plist
TaskNote Bridge.xcodeproj/: project.pbxproj
Things MCP/: ContentView.swift  Models.swift  SwiftMCPServer.swift  SwiftMCPServer_Minimal.swift  ThingsIntegration.swift
Things MCP.app/Contents/: Info.plist
Things MCP.xcodeproj/: project.pbxproj
(+17 files in other folders)
