[project]
name = "tasknote-bridge"
version = "0.1.0"
description = "TaskNote Bridge - Things 3 + Apple Notes MCP Tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.2.0",
    "things-py>=0.0.15",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
